# invenio-oauth2server

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  pypi-release.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  overview.rst  usage.rst
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py  consumer.py  requirements.txt
examples/templates/: jwt.html
invenio_oauth2server/: __init__.py  _compat.py  admin.py  cli.py  config.py  decorators.py  errors.py  ext.py  forms.py  models.py  provider.py  proxies.py  registry.py  scopes.py  signals.py  utils.py  validators.py  version.py  views.py
invenio_oauth2server/alembic/: 12a88921ada2_create_oauth2server_tables.py  3d7f57a61d67_change_expires_at_type.py  4e57407b8e4a_add_on_delete_cascade.py  6843f5996f26_add_on_delete_cascade.py  aa546f2a8d2f_create_oauth2server_branch.py
invenio_oauth2server/context_processors/: jwt.py
invenio_oauth2server/templates/invenio_oauth2server/: authorize.html  errors.html  index.html  jwt.html
invenio_oauth2server/templates/invenio_oauth2server/settings/: _macros.html  base.html  client_new.html  client_view.html  helpers.html  index.html  token_new.html  token_permission_view.html  token_view.html
invenio_oauth2server/templates/oauth2server/: authorize_base.html  errors_base.html
invenio_oauth2server/templates/oauth2server/settings/: client_new_base.html  client_view_base.html  index_base.html  token_view_base.html
invenio_oauth2server/templates/semantic-ui/invenio_oauth2server/: authorize.html  errors.html
invenio_oauth2server/theme/semantic/: form_styling.py
invenio_oauth2server/translations/: invenio.pot  messages.pot
invenio_oauth2server/translations/af/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ar/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/bg/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ca/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/cs/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/da/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/de/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/el/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/es/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/et/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/et_EE/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/fa/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/fi/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/fr/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/gl/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/hr/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/hu/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/it/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ja/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ka/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ko/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/lt/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/no/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/pl/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/pt/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ro/LC_MESSAGES/: messages.po
invenio_oauth2server/translations/ru/LC_MESSAGES/: messages.po
invenio_oauth2server/upgrades/: oauth2server_2014_02_17_initial.py  oauth2server_2014_10_21_encrypted_token_columns.py  oauth2server_2015_07_14_innodb.py  oauth2server_2015_10_01_legacy_removal.py
invenio_oauth2server/views/: __init__.py  server.py  settings.py
tests/: conftest.py  helpers.py  test_admin.py  test_alembic.py  test_cli.py  test_decorators.py  test_invenio_oauth2server.py  test_models.py  test_provider.py  test_providers.py  test_server.py  test_settings.py  test_utils.py  test_validators.py
(+17 files in other folders)
